# checkers.cpp

./: .gitignore  CMakeLists.txt  classes.hpp  main.cpp  readme.md
classes/: board.cpp  constants.hpp  game.cpp  game.hpp
classes/game/: game.cpp  game.hpp
classes/system/: system.cpp  system.hpp
include/: game.hpp  system.hpp
src/: game.cpp  main.cpp  system.cpp
utils/: constants.hpp
